<resources>
    <string name="app_name">TCC PAY</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="this_field_is_required">This Field Is Required</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Havent_account_">Haven\'t Account ?</string>
    <string name="Enter_Phone_number">Enter phone Number Or Email</string>
    <string name="Create_new_account">Create Account</string>
    <string name="did_you_forgot_your_password_">Did you Forget Your Password</string>
    <string name="Login">Login</string>
    <string name="Card_Details" translatable="false">Please Add Card Details</string>
    <string name="transactions" translatable="false">Transactions</string>
    <string name="Payment_Method" translatable="false">Payment Method</string>
    <string name="Enter_your_password">Enter Your Password</string>
    <string name="Welcome_back">Welcome Back</string>
    <string name="signup">Signup</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_mobile">Enter Your Mobile</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_placeholder" translatable="false">xxxx xxxx xxxx xxx</string>
    <string name="card_month">Card Month</string>
    <string name="card_year">Card Year</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="exp_date" translatable="false">Expiry Date</string>
    <string name="register">Register</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="create_an_account">Create an Account</string>
    <string name="LOGIN">LOGIN</string>
    <string name="submit" translatable="false">Save Card Information</string>
    <string name="signout" translatable="false">Sign out</string>
    <string name="signup_details">Enter your email address and\n create password to login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="password_strenght">Password strength</string>
    <string name="strong">Strong</string>
    <string name="password_conditions">* Use 6 to 10 characters.\n* Beside letters include at least a number or symbol\n (91@#*).\n* Avoid using the same password for multiple sites.</string>
    <string name="tcc_email">Ali@Tcc-ict.com</string>
    <string name="hiden">xxxxxxxxxxxxxx</string>
    <string name="pinCode">"PIN Code"</string>
    <string name="hint_phone">Phone Number</string>
    <string name="face_capturing">Face Capturing</string>
    <string name="proceed">Proceed</string>
    <string name="success_face_capturing" translatable="false">Face Verification\n Successfully</string>
    <string name="success_face_detail" translatable="false">Your identity has been verified.\nPlease login to access.</string>
    <string name="continuos">Continue</string>
    <string name="capture_your_face">Capture your face</string>
    <string name="end_date_must_after_start_date">End date must after start date</string>
    <string name="common_verifying_progress">Verifying data please wait…</string>
    <string name="password_confirmation_not_matched">Password Confirmation Not Matched</string>
    <string name="transaction">Transactions</string>
    <string name="this_week">This Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="paid">Paid</string>
    <string name="internet_connection_required">Internet Connection Required</string>
    <string name="recapture">Recapture</string>
    <string name="Login_details">Enter your email address and\n password to login</string>
    <string name="bill_no">"Bill No "</string>
    <string name="confirm_pinCode">Confirm Pin Code</string>
    <string name="confrm_password">Confirm Password</string>

</resources>
