<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="133dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="133dp"
            android:src="@drawable/tcc_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Login_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="24dp"
            android:hint="@string/enter_your_email"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2"
            app:suffixTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical|start"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_10sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/country_code_spinner"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@null"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/phone" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="@id/country_code_spinner"
            app:layout_constraintEnd_toStartOf="@id/country_code_spinner"
            app:layout_constraintTop_toTopOf="@id/country_code_spinner" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="8dp"
            android:hint="@string/Enter_your_password"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_ic"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical|start"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_10sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/did_you_forgot_your_password_"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/Password"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="32dp"
            android:background="@drawable/primary_btn"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_password_tv" />

        <TextView
            android:id="@+id/have_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="120dp"
            android:text="@string/Havent_account_"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_new_account_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="8dp"
            android:background="@drawable/primary_btn"
            android:text="@string/Create_new_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/have_not_account" />

        <LinearLayout
            android:id="@+id/llProgress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clickable="true"
            android:elevation="@dimen/_4sdp"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/pPulse"
                android:layout_width="200dp"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/common_verifying_progress"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>