 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_27sdp"
                        android:id="@+id/btnBack"
                        android:layout_height="@dimen/_27sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:padding="4sp"
                        android:src="@drawable/icon_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/create_an_account"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/logintv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:text="@string/LOGIN"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/signup_details"
                    android:textSize="14sp" />

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/dotsIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:ci_drawable="@drawable/selected_indicator"
                    app:ci_drawable_unselected="@drawable/unselected_indicator"
                    app:ci_gravity="center"
                    app:ci_height="@dimen/_1sdp"
                    app:ci_orientation="horizontal"
                    app:ci_width="@dimen/_7sdp"
                    app:layout_constraintHorizontal_chainStyle="spread_inside" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:overScrollMode="never" />


            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/primary_btn"
            android:text="@string/continuos"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/llProgress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clickable="true"
            android:elevation="@dimen/_4sdp"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/pPulse"
                android:layout_width="200dp"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/common_verifying_progress"
                android:textSize="20sp" />

        </LinearLayout>

 </androidx.constraintlayout.widget.ConstraintLayout>