<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/enter_email_address"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:suffixTextColor="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTcc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:maxLength="12"
            android:gravity="center_vertical|start"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_10sdp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/create_password"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_10sdp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/create_password"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_10sdp" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/password_rectangle"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/password_strenght"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:background="@drawable/status_password"
                android:text="@string/strong"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:gravity="start"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:textColor="@color/black"
            android:text="@string/password_conditions"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>